syntax = "proto3";

package ibc.applications.interchain_swap.v1;
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ibcswap/ibcswap/v6/modules/apps/101-interchain-swap/types";


enum PoolAssetSide {
  SOURCE = 0;
  TARGET = 1;
}

enum PoolStatus {
  INITIALIZED = 0;
  ACTIVE = 1;
}
message PoolAsset {
  PoolAssetSide side = 1;
  cosmos.base.v1beta1.Coin balance = 2;
  uint32 weight = 3;
  uint32 decimal = 4; 
}

message InterchainLiquidityPool {
  string id = 1;
  string creator = 2;
  repeated PoolAsset assets = 3;
  uint32 swapFee = 4;
  cosmos.base.v1beta1.Coin supply = 5;
  PoolStatus status = 6;
  float pool_price = 7;
  string originatingChainId = 8;
  string counterPartyPort = 9; 
  string counterPartyChannel = 10;
}


message InterchainMarketMaker {
  string poolId = 1; 
  InterchainLiquidityPool pool = 2; 
}



// MarketFeeUpdateProposal details a proposal for updating market fee.

message MarketFeeUpdateProposal {
  option deprecated                          = true;
  option (gogoproto.equal)                   = false;
  option (gogoproto.goproto_getters)         = false;

  string   title                           = 1;
  string   description                     = 2;
  string   pool_id                         = 3;
  uint32   fee_rate                        = 4;
}


